# c-constructs-still-dont-work-cpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: check.yml
docs/: compatibility-matrix.md  godbolt-links.md  validation.md
examples/: 01_void_pointer_malloc.c  01_void_pointer_malloc.cpp  02_malloc_object_lifetime.cpp  03_const_cast.cpp  04_enums.c  04_enums.cpp  05_empty_parameter_lists.c  05_empty_parameter_lists.cpp  06_designated_initializers.c  06_designated_initializers.cpp  07_restrict.c  07_restrict_cpp_extension.cpp  08_flexible_array_member.c  08_flexible_array_member_cpp_alternative.cpp  09_c23_fixed_underlying_enum.c
scripts/: check.sh
